<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/size_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_style_size"
            app:layout_constraintBottom_toTopOf="@id/radio_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/color_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:checkedButton="@id/radio_16"
            app:layout_constraintTop_toBottomOf="@id/size_title">

            <RadioButton
                android:id="@+id/radio_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radioStartMargin"
                android:text="@string/little_text_size"
                android:textSize="@dimen/little_text_size" />

            <RadioButton
                android:id="@+id/radio_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radioStartMargin"
                android:text="@string/average_text_size"
                android:textSize="@dimen/average_text_size" />

            <RadioButton
                android:id="@+id/radio_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radioStartMargin"
                android:text="@string/big_text_size"
                android:textSize="@dimen/big_text_size" />
        </RadioGroup>

        <TextView
            android:id="@+id/color_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_style_color"
            app:layout_constraintBottom_toTopOf="@id/radio_text_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_text_size" />

        <RadioGroup
            android:id="@+id/radio_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:checkedButton="@id/radio_black"
            app:layout_constraintTop_toBottomOf="@id/color_title">

            <RadioButton
                android:id="@+id/radio_burnt_umber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radioStartMargin"
                android:text="@string/burnt_umber_color"
                android:textColor="@color/burnt_umber" />

            <RadioButton
                android:id="@+id/radio_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radioStartMargin"
                android:text="@string/black_color"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radio_kashmir_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radioStartMargin"
                android:text="@string/kashmir_green_color"
                android:textColor="@color/kashmir_green" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
